--- a/templates/hunt.html
+++ b/templates/hunt.html
@@ -1,7 +1,6 @@
 {%extends 'layout.html'%}
-{%block heading%}
-{%endblock%}
-{%block content%}                               <!-- add Score part somewhere-->>
+{%block content%}     
+{{ super() }}                          <!-- add Score part somewhere-->
     
     <div class='container'> 
         <div class="row">
