--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {%extends 'layout.html'%}
 {%block heading%}
+{{ super() }}
 <div class="container">
     <h1 class = "grey-text text-lighten-5">The prize awaits</h1>
     <br>
