--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,8 @@
 
     <title>Hunt</title>
   </head>
-  <body style="background-image: url('static/try1.jpg');">
+  <body style="background: url('static/try1.jpg') center/cover no-repeat  fixed ;">
+    <!-- background: url("books.jpg") center/cover no-repeat  fixed; -->
 
     
   <div class="navbar-fixed orange darken-2">
@@ -45,7 +46,7 @@
   </div>
   {%if current_user.is_authenticated%}
   <div class="container">
-    <a href="{{url_for('questions',number=current_user.score+1)}}" class="waves-effect waves-light btn-large" style="margin-left:700px;"><i class="material-icons left">cloud</i>Score:{{current_user.score}}</a>
+    <a href="{{url_for('questions',number=current_user.score+1)}}" class="waves-effect waves-light btn-large" style="margin-left:700px;"><i class="material-icons left">whatshot</i>Score:{{current_user.score}}</a>
   </div>
 
   {%endif%}
