--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,18 @@
 {%extends 'layout.html'%}
 {%block heading%}
 <div class="container">
-    <h1 class = "grey-text text-lighten-5">The prize awaits</h1>
-    <br>
-    <p class = "grey-text text-lighten-5 flow-text ">Welcome to Swiggy's first online treasure hunt</p>
-    <p class = "flow-text">The rules are simple, keep guessing the answers and beat everyone else to the ultimate reward</p>
+    <h1 class = "grey-text text-lighten-5" style = "font-family: Trade Winds;">The Hunt has begun....</h1>
+    <h4 class = "grey-text text-lighten-5" style = "font-family: Rakkas;margin-bottom: 30px;"> ..... and the treasure shall belong to the worthy</h4>
+    <div style = "border:1px solid white;height: 250px;width: 600px;">
+        
+        <ol class = "grey-text text-lighten-5" style = "font-family: Rakkas;font-style: italic;">
+            <li style = "font-size:x-large">Sign Up for the hunt</li>
+            <li style = "font-size:x-large">Login using your user name and password</li>
+            <li style = "font-size:x-large">Type all your answers in lower case</li>
+            <li style = "font-size:x-large">Hints will be provided in the chat section</li>
+            <li style = "font-size:x-large">Keep solving till you reach the top of leaderboard</li>
+        </ol>
+    </div>
 </div>
 {%endblock%}
 {%block content%}
@@ -12,11 +20,11 @@
 
 
 <div class="container">
-<a href="{{url_for('questions',number=current_user.score+1)}}" class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Go to Hunt</a>
+<a href="{{url_for('questions',number=current_user.score+1)}}" class="waves-effect waves-light btn-large"><i class="material-icons left">face</i>Go to Hunt</a>
 </div>
 {%else%}
-<div class="container">
-    <a href="{{url_for('home')}}" class="waves-effect waves-light btn-large"><i class="material-icons left">cloud</i>Login to Play</a>
+<div class="container" style = "margin-top: 20px;">
+    <a href="{{url_for('home')}}" class="waves-effect waves-light btn-large orange darken-2"><i class="material-icons left"></i>Login to Play</a>
 </div>
 {%endif%}
 {%endblock%}
