--- a/treasure/templates/leader.html
+++ b/treasure/templates/leader.html
@@ -1,6 +1,6 @@
 {%extends 'layout.html'%}
 {%block heading%}
-<div class="container">
+<div class="container grey-text text-lighten-5">
     <h1>
         The Leaders:
     </h1>
