Change text color

--- a/treasure/templates/hunt.html
+++ b/treasure/templates/hunt.html
@@ -23,7 +23,7 @@
                             </div>
                             <div class = "row" style = "margin-top: 10px;">
                                 {{form.submit(class="btn btn-outline-info")}}
-                                <span>{{error}}</span>
+                                <span class="red-text"><i>{{error}}</i></span>
                             </div>
                     </form>
 
