--- a/treasure/templates/index.html
+++ b/treasure/templates/index.html
@@ -14,11 +14,10 @@
         </ol>
     </div>
 </div>
+<h5 class="red-text">{{trap}}</h5>
 {%endblock%}
 {%block content%}
 {%if current_user.is_authenticated%}
-
-
 <div class="container">
 <a href="{{url_for('questions',number=current_user.score+1)}}" class="waves-effect waves-light btn-large"><i class="material-icons left">face</i>Go to Hunt</a>
 </div>
