--- a/treasure/templates/layout.html
+++ b/treasure/templates/layout.html
@@ -49,7 +49,7 @@
   </div>
   {%if current_user.is_authenticated%}
   <div class="container">
-    <a href="{{url_for('questions',number=current_user.score+1)}}" class="waves-effect waves-light btn-large" style="margin-left:700px;margin-top:10px"><i class="material-icons left">whatshot</i>Score:{{current_user.score}}</a>
+    <a href="{{url_for('leader')}}" class="waves-effect waves-light btn-large" style="margin-left:700px;margin-top:10px"><i class="material-icons left">whatshot</i>Score:{{current_user.score}}</a>
   </div>
 
   {%endif%}
